[tool.poetry]
name = "ocpp-simulator"
version = "0.1.0"
description = ""
authors = ["ViCt0r99 <wiktor.jan999@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
typer = "^0.6.1"
questionary = "^1.10.0"
websockets = "^10.3"
ocpp = "^0.15.0"
Faker = "^13.15.1"
factory-boy = "^3.2.1"
pytest = "^7.1.2"
pytest-asyncio = "^0.19.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
pytest-cov = "^2.10.1"
prospector = "^1.7.7"
bandit = "^1.7.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
